Fix: different view for mobile; adjusted placement if too close to righthand side

--- a/_includes/styles/shortcodes.scss
+++ b/_includes/styles/shortcodes.scss
@@ -328,6 +328,7 @@
 }
 
 .term-definition {
+  max-width:100%;
   position: absolute;
   z-index: 2000;
   width: 400px;
@@ -335,10 +336,32 @@
   padding: 12px 16px 16px;
   color: var(--color-carbon);
   border-radius: 8px;
-  left: 0;
   line-height: 1.4;
   font-size: 16px;
   border: 1px solid var(--color-purple-600);
+
+  @media(max-width:400px){
+    position:fixed;
+    top:0;
+    bottom:0;
+    border-radius:0;
+  }
+
+  &--close{
+    top:6px;
+    right:6px;
+    padding:10px;
+    border: 2px solid transparent;
+    border-radius: 8px;
+    display: flex;
+    position: absolute;
+    fill: var(--color-purple);
+    cursor:pointer;
+
+    &:hover{
+      background:#fbe6fa;
+    }
+  }
 
   & .eyebrow {
     font-size: small;
